--- a/cn.zh-CN/RDS SQL Server 数据库/恢复/跨地域恢复数据.md
+++ b/cn.zh-CN/RDS SQL Server 数据库/恢复/跨地域恢复数据.md
@@ -2,7 +2,7 @@
 
 如果您已完成跨地域备份数据，可以使用备份文件将数据恢复到跨地域备份所在地域的新实例上。
 
-[跨地域备份数据]()
+[跨地域备份数据](/cn.zh-CN/RDS SQL Server 数据库/备份/跨地域备份数据.md)
 
 ## 跨地域恢复到新实例
 
@@ -10,17 +10,19 @@
 
 2.  在左侧导航栏单击**跨地域备份**。
 
-3.  找到目标实例，单击实例ID。
+3.  在上方选择实例所在地域。
 
-    ![跨地域恢复](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2030404061/p48557.png)
+4.  找到目标实例，单击实例ID。
 
-4.  在**数据备份**页签下找到目标备份集，单击右侧**恢复**。
+    ![跨地域恢复](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2030404061/p48557.png)
 
-    ![选择备份](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6313729951/p48558.png)
+5.  在**数据备份**页签下找到目标备份集，单击右侧**恢复**。
 
-5.  选择**恢复到全新实例**，单击**确定**。
+    ![选择备份](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6313729951/p48558.png)
 
-6.  在**数据库恢复**页面选择**包年包月**或**按量付费**页签，然后设置如下参数。
+6.  选择**恢复到全新实例**，单击**确定**。
+
+7.  在**数据库恢复**页面选择**包年包月**或**按量付费**页签，然后设置如下参数。
 
     |参数|说明|
     |--|--|
@@ -37,9 +39,9 @@
 
     **说明：** 数据库类型、版本、系列等参数和源实例保持一致，无法修改。
 
-7.  设置**购买时长**（仅针对包年包月实例）和**数量**，然后单击右侧**立即购买**。
+8.  设置**购买时长**（仅针对包年包月实例）和**数量**，然后单击右侧**立即购买**。
 
-8.  在**订单确认**页面勾选服务条款，根据提示完成支付。
+9.  在**订单确认**页面勾选服务条款，根据提示完成支付。
 
 
 ## 相关文档
