--- a/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/读写分离.md
+++ b/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/读写分离.md
@@ -71,14 +71,28 @@
 
 -   当主实例或只读实例变更配置时可能会出现连接闪断。
 -   新增只读实例后，新建的连接才会被路由到新只读实例上。
--   独享代理地址暂不支持SSL加密。
 -   独享代理地址暂不支持压缩协议。
 -   使用独享代理连接地址时，事务请求都会路由到主实例。
 -   使用独享代理连接地址进行读写分离时，不保证非事务读的一致性，业务上有读一致性需求可以封装到事务中。
 -   使用独享代理连接地址时，`show processlist`会将所有节点的结果合并后返回。
 -   如果开通了短连接优化功能，`show processlist`可能会显示闲置的用户连接。
 -   如果执行了[Multi-Statements](https://dev.mysql.com/doc/internals/en/multi-statement.html)或存储过程，当前连接的后续请求会全部路由到主节点，需断开当前连接并重新连接才能恢复读写分离。
--   支持Hint语法`/*FORCE_MASTER*/`和`/*FORCE_SLAVE*/`，但是因为Hint的路由优先级最高，例如Hint不受一致性、事务的约束，需要您评估是否可以用于业务。另外Hint语句里不能包含改变环境变量的语句，例如`/*FORCE_SLAVE*/ set names utf8;`，可能导致后续业务出错。
+
+## 支持的Hint语法
+
+如果使用MySQL命令行进行连接并使用Hint语句，需要在命令中增加`-c`选项，否则Hint会被MySQL命令行工具过滤。
+
+-   支持通过`/*FORCE_MASTER*/`和`/*FORCE_SLAVE*/`指定在主实例或备实例执行查询命令。
+
+    **说明：**
+
+    -   因为Hint的路由优先级最高，例如Hint不受一致性、事务的约束，需要您评估是否可以用于业务。
+    -   Hint语句里不能包含改变环境变量的语句，例如`/*FORCE_SLAVE*/ set names utf8;`，可能导致后续业务出错。
+-   支持通过`/*force_node='<实例ID>'*/`命令指定在某个实例执行查询命令。例如`/*force_node='rr-bpxxxxx'*/ show processlist;`，该`show processlist;`命令只在rr-bpxxxxx实例执行。如果这个实例发生故障，则返回报错`force hint server node is not found, please check.`。
+-   支持通过`/*force_proxy_internal*/set force_node = '<实例ID>';`命令永久指定在某个实例执行查询命令。例如`/*force_proxy_internal*/set force_node = 'rr-bpxxxxx';`，执行该命令后，后续所有命令只发往rr-bpxxxxx实例，如果这个实例发生故障，则返回报错`set force node 'rr-bpxxxxx' is not found, please check.`。
+
+    **说明：** 通常不建议使用`/*force_proxy_internal*/`语法，会导致后续所有请求都发往该实例，读写分离失效。
+
 
 ## 开通读写分离
 
@@ -110,7 +124,25 @@
 
 开通后，您需要在应用程序中配置读写分离地址（即独享代理地址），就可以使写请求自动转发到主实例，读请求自动转发到各个只读实例。
 
-![读写分离地址](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4813729951/p113257.png)
+## 页面介绍
+
+开启数据库独享代理后，您可以在该页面设置读写分离的部分参数，说明如下。
+
+![读写分离地址](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8520057061/p113257.png)
+
+|类别|参数|说明|
+|--|--|--|
+|**读写分离基本信息**|**读写分离地址**|在应用程序中使用**读写分离地址**，即可实现读写请求的自动转发。**说明：** **代理服务**页面的多个连接地址都是**读写分离地址**，您可以根据访问类型或业务需求配置在不同的应用程序中。 |
+|**网络端口**|**读写分离地址**的端口。|
+|**地址类型**|**读写分离地址**的地址类型。|
+|**延迟阈值**|只读实例同步主实例数据时允许的最长延迟时间。若一个只读实例的延迟时间超过该阈值，则不论该只读实例的权重是多少，读请求都不会转发至该只读实例。|
+|**权重分配模式**|分为如下两种模式：-   **系统分配**：系统根据实例规格自动分配各个实例的读权重。后续该主实例下新增的只读实例也会自动按照系统分配的权重加入到读写分离链路中，无需手动设置。更多信息请参见[系统权重分配规则](/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/共享代理（下线中）/系统权重分配规则.md)。
+-   **自定义**：手动设置各个实例的读权重，范围为0至10000。后续该主实例下新增只读实例的读权重默认为0，需要您手动修改。 |
+|**参与实例个数**|参与读写分离的主实例和只读实例的总个数。|
+|**主实例**|主实例ID。 右侧会显示对应的权重。|
+|**只读实例**|只读实例ID。右侧会显示对应的权重。|
+|**事务拆分**|**读写分离地址**是否开通了事务拆分功能。详情请参见[事务拆分](/intl.zh-CN/RDS MySQL 数据库/数据库代理（读写分离）/事务拆分.md)。 **说明：** 您可以单击右侧的**开通**或**关闭**按钮开关事务拆分功能。 |
+|**读写分离示意图**|无|展示主实例和只读实例的架构以及当前状态。|
 
 ## 常见问题
 
