--- a/cn.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/设置白名单.md
+++ b/cn.zh-CN/RDS PostgreSQL 数据库/数据安全/加密/设置白名单.md
@@ -40,7 +40,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 
     **说明：** 请勿在这些分组里增加自己的业务IP，避免相关产品更新时覆盖掉您的业务IP，影响业务正常运行。
 
-    ![系统分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p77745.png)
+    ![系统分组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5769037061/p77745.png)
 
 
 ## 高安全白名单模式设置IP白名单
@@ -68,7 +68,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
     |连接场景|操作|
     |----|--|
     |ECS实例和RDS实例在相同专有网络VPC内（推荐）|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
+    2.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例和RDS实例在不同专有网络VPC内|    1.  在RDS实例的**数据库连接**页面单击**切换为经典网络**并确定。
@@ -77,11 +77,11 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     3.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    4.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
+    4.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例和RDS实例均为经典网络|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
-    2.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
+    2.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** ECS实例上的应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例为经典网络 RDS实例为专有网络
@@ -91,7 +91,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
+    3.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |ECS实例为专有网络 RDS实例为经典网络
@@ -101,7 +101,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 **说明：** ECS实例和RDS实例需要处于相同地域才能切换到相同VPC。如果地域不同，为业务稳定，建议您通过DTS将RDS实例迁移至ECS实例所属地域。详情请参见[RDS实例间数据迁移](/cn.zh-CN/RDS MySQL 数据库/数据迁移/RDS实例间数据迁移.md)。
 
     2.  在RDS实例的**白名单设置**页面单击**default 专有网络**分组右侧的**修改**。
-    3.  在弹出的对话框中，填写ECS实例的内网IP地址，然后单击**添加**。
+    3.  在弹出的对话框中，填写ECS实例的内网IP地址。
 
 **说明：** 应用程序中使用RDS实例的内网连接地址。 |
     |云外主机连接RDS实例|    1.  在**白名单设置**页面单击**default 经典网络**分组右侧的**修改**。
@@ -132,7 +132,7 @@ RDS的白名单包括两种类型，IP白名单和安全组，详细说明如下
 
 5.  在**白名单设置**页签中，单击**default**白名单分组中的**修改**。
 
-    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3477559951/p1794.png)
+    ![](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5769037061/p1794.png)
 
     **说明：** 您也可以单击**添加白名单分组**新建自定义分组。
 
